# shell-cgcompress-extension

./: .gitmodules  CMakeLists.txt  README.md
shell-cgcompress-extension/: CgCompressHandler.cpp  CgCompressHandler.hpp  ZipHandler.cpp  cgcompressProperties.propdesc
src/: CgCompressHandler.hpp  dllmain.cpp
